--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -130,11 +130,7 @@ table {
 }
 
 body {
-    font-family: 
-        'Noto Sans TC',
-        'Microsoft JhengHei',
-        微軟正黑體,
-        sans-serif;
+    font-family: Helvetica;//,'Noto Sans TC','Microsoft JhengHei',sans-serif;
 }
 
 a {
