--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -142,7 +142,7 @@ header{
             }
             
             &#{-li} {
-                @include px(0.75rem);
+                @include px(1.5rem);
                 @include media-max($xl) {
                     width: 100%;
                 }
@@ -157,6 +157,9 @@ header{
                     position: relative;
                     font-weight: bolder;
                     font-size: 1rem;
+                    @include media-max($md) {
+                        font-size: 0.875rem;
+                    }
                     &:link {
                         color: #fdfafa;
                     }
@@ -201,12 +204,13 @@ header{
                 margin-right: 1.25rem;
                 @include media-max($xl) {
                     width: 100%;
+                    padding-left: 0.75rem;
                 }
                 >a::after {
                     content: '';
                     position: absolute;
                     top: 50%;
-                    right: -1rem;
+                    right: -1.25rem;
                     display: inline-block;
                     pointer-events: none;
                     transform: translateY(0) rotate(0deg);
@@ -246,7 +250,6 @@ header{
         }
         
         &#{-li} {
-            
             &#{-link} {
                 white-space: nowrap;
                 display: block;
@@ -256,7 +259,10 @@ header{
                 }
                 color: white;
                 font-weight: bolder;
-                font-size: 0.875rem;
+                font-size: 0.935rem;
+                @include media-max($md) {
+                    font-size: 0.875rem;
+                }
                 &:link {
                     color: white;
                 }
