--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -7,7 +7,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: 9999;
+        z-index: 999;
         width: 100%;
         height: 100%;
         pointer-events: auto;
@@ -140,14 +140,14 @@
         transition: 0.2s ease-in;
         z-index: 1;
     }
-    span{
+    span,a{
         transition: 0.2s ease-in;
         position: relative;
         color: $bg;
         z-index: 2;
     }
     &:hover{
-        span{
+        span,a{
             color: $text;
         }
         &::after{
