--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -83,9 +83,12 @@ video {
     padding: 0;
     border: 0;
     font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.2;
     font: inherit;
     vertical-align: baseline;
     box-sizing: border-box;
+    color: #fdfafa;
 }
 
 article,
@@ -130,30 +133,31 @@ table {
 }
 
 body {
-    font-family: Helvetica;//,'Noto Sans TC','Microsoft JhengHei',sans-serif;
-}
+    font-family: "Helvetica Neue", apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,  Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",'Noto Sans TC','Microsoft JhengHei';
+}//Helvetica
 
 a {
     text-decoration: none;
-    color: #000;
+    background-color: transparent;
+    color: #fdfafa;
     cursor: pointer;
-
-    &:hover {
-        text-decoration: none;
-        color: #000;
-    }
-    &:active {
-        text-decoration: none;
-        color: #000;
-    }
-    &:link {
-        text-decoration: none;
-        color: #000;
-    }
-    &:visited {
-        text-decoration: none;
-        color: #000;
-    }
+  }
+  
+a:hover {
+    text-decoration: none;
+    color: #fdfafa;
+}
+  
+a:not([href]):not([tabindex]) {
+    text-decoration: none;
+}
+  
+a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+    text-decoration: none;
+}
+  
+a:not([href]):not([tabindex]):focus {
+    outline: 0;
 }
 
 i {
@@ -165,13 +169,6 @@ button{
     &:focus{
         outline: 0;
     }
-    &:active{
-        box-shadow: 0 0 0.5rem 0.375rem rgba(0, 0, 0, 0.25) inset;
-    }
-}
-a[type="button"]{
-    display: inline-block;
-    text-align: center;
     &:active{
         box-shadow: 0 0 0.5rem 0.375rem rgba(0, 0, 0, 0.25) inset;
     }
