--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -1,7 +1,7 @@
 .home{
     &#{-sec1}{
         padding-top: 7.5rem;
-        height: 1200px;
+        height: 100vh;
         position: relative;
         background-color: #000;
         @include media-max($sm) {
@@ -67,13 +67,15 @@
                     text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
                 }
                 button{
-                    @include btn-outline(#fdfcfc,#000);
-                    font-size: 1.125rem;
-                    font-weight: bolder;
-                    padding: 0.625rem 1.5rem;
-                    margin-top: 0.5rem;
-                    margin-bottom: 9rem;
-                    border-radius: 0.25rem;
+                     @include stretched-link;
+                     display: block;
+                     @include btn-outline(#fdfcfc,#000);
+                     font-size: 1.125rem;
+                     font-weight: bolder;
+                     padding: 0.625rem 1.5rem;
+                     margin-top: 0.5rem;
+                     margin-bottom: 9rem;
+                     border-radius: 0.25rem;
                 }
             }
         }
