about-sec1~4 切版

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,8 +7,9 @@
 @import 'scss/page/header';
 @import 'scss/page/footer';
 @import 'scss/page/home';
-@import 'scss/page/knowledge';
+@import 'scss/page/about';
 @import 'scss/page/applications';
+@import 'scss/page/knowledge';
 @import 'scss/fancyapps/index';
 @import 'scss/slick-carousel/slick';
 @import 'scss/slick-carousel/slick-theme';
