--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -35,6 +35,7 @@
             }
         }
     }
+    //******************************************************************************************************
     &#{-sec2}{
         background-color: #92a9c9;
         height: 50rem;
@@ -98,6 +99,7 @@
             }
         }
     }
+    //******************************************************************************************************
     &#{-sec3}{
         height: 37.5rem;
         position: relative;
@@ -205,6 +207,7 @@
             }
         }
     }
+    //******************************************************************************************************
     &#{-sec4}{
         &#{-container}{
             @include container;
@@ -241,16 +244,67 @@
             }
         }
     }
+    //******************************************************************************************************
     &#{-sec5}{
-        
+        background-size: cover;
+        background-position: center;
+        &#{-container}{
+            @include container;
+            padding-top: 5rem;
+            padding-bottom: 8rem;
+
+            &#{-display}{
+                padding-top: 1rem;
+                padding-bottom: 7.5rem;
+                max-width: 1140px;
+                margin: 0 auto;
+                width: 100%;
+                text-align: center;
+
+                h2{
+                    color: #fcfcfb;
+                    @include display-4;
+                    margin-bottom: 1.5rem;
+                }
+                p{
+                    color: #fcfcfb;
+                    font-size: 0.9375rem;
+                    max-width: 40rem;
+                    margin: 1rem auto;
+                    width: 100%;
+                }
+                small{
+                    font-size: 0.5;
+                }
+            }
+            &#{-row}{
+                @include row;
+                &#{-col}{
+                    text-align: center;
+                    @include col(25%);
+                    &#{-number}{
+                        color: #fcfcfb;
+                        font-size: 3.75rem;
+                        margin-bottom: 1.5rem;
+                    }
+                    &#{-line}{
+                        background-color: #6da8f2;
+                        height: 0.125rem;
+                        width: 8.5rem;
+                        display: inline-block;
+                        margin-bottom: 1.5rem;
+                    }
+                    &#{-text}{
+                        color: #fcfcfb;
+                        font-size: 1.25rem;
+                        margin-bottom: 1.5rem;
+                    }
+                }
+            }
+        }
     }
-    &#{-sec6}{
-        
-    }
-    &#{-sec7}{
-        
-    }
-    &#{-sec8}{
-        
-    }
+    //******************************************************************************************************
+    //&#{-sec6}{}
+    //******************************************************************************************************
+    // &#{-sec7}{}
 }
